# myexpertchat

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
assets/: hong_kong.txt  london.txt
myexpertchat/: config.py  db.py  frontend.py  ingest.py  llama_cpp.py  rag.py  raw_query.py  settings.json
