[tool.poetry]
name = "myexpertchat"
version = "0.1.0"
description = ""
authors = ["Dominik Christ <dominik.christ@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
weaviate-client = ""
sentence-transformers = "^2.6.1"
langchain = "^0.1.13"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
