[tool.poetry]
name = "myexpertchat"
version = "0.1.0"
description = ""
authors = ["Dominik Christ <dominik.christ@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
weaviate-client = "3.99.0a5"
sentence-transformers = "^2.6.1"
langchain = "^0.1.13"
streamlit = "^1.32.2"
dynaconf = "^3.2.5"
flask = "^3.0.2"
gunicorn = "^21.2.0"
llama-cpp-python = "^0.2.57"
grpcio = "^1.62.1"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120